# simple-web-server

./: Cargo.toml  LICENSE  README.md  config.toml
src/: main.rs
