[package]
name = "wserver"
version = "0.1.2"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Simple web server powered by Rust"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/simple-web-server"
repository = "https://github.com/deadblackclover/simple-web-server"
keywords = ["web", "server", "webserver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
gotham = "0.5.0"
