[package]
name = "wserver"
version = "0.1.4"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Simple web server powered by Rust"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/simple-web-server"
repository = "https://github.com/deadblackclover/simple-web-server"
keywords = ["web", "server", "webserver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
futures = "0.3.21"
gotham = "0.6.0"

[package.metadata.deb]
maintainer = "DEADBLACKCLOVER <deadblackclover@protonmail.com>"
copyright = "2020, DEADBLACKCLOVER <deadblackclover@protonmail.com>"
license-file = ["LICENSE", "0"]
extended-description = "Simple web server powered by Rust"
depends = "$auto"
section = "web"
priority = "optional"
assets = [
    ["target/release/wserver", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/wserver/README", "644"],
]